# cryptoid

./: .cryptoid.yaml.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
claude/skills/cryptoid/: SKILL.md
docs/plans/: 2026-02-17-interactive-protect-design.md
hugo/assets/js/: cryptoid.js
hugo/layouts/shortcodes/: cryptoid-encrypted.html
hugo/static/js/: cryptoid.js
src/cryptoid/: __init__.py  cascade.py  cli.py  crypto.py  frontmatter.py  tui.py
tests/: __init__.py  conftest.py  test_cascade.py  test_claude_commands.py  test_cli.py  test_config_commands.py  test_crypto.py  test_frontmatter.py  test_hugo_commands.py  test_integration.py  test_tui.py
tests/fixtures/hugo-site/: .cryptoid.yaml  hugo.toml
tests/fixtures/hugo-site/content/: public-post.md  secret-notes.md
tests/fixtures/hugo-site/content/private/: _index.md  auto-encrypted.md
