[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryptoid"
version = "0.2.0"
description = "Client-side encrypted content for Hugo static sites"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alexander Towell", email = "lex@metafunctor.com" }
]
keywords = ["hugo", "encryption", "static-site", "aes", "webcrypto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=41.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
cryptoid = "cryptoid.cli:main"

[project.urls]
Homepage = "https://github.com/queelius/cryptoid"
Repository = "https://github.com/queelius/cryptoid"

[tool.hatch.build.targets.wheel]
packages = ["src/cryptoid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/cryptoid"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
